# rust-crossplatform-library

./: .gitignore  README-apple.md  README.md  build-and-link-ios-lib.sh  rustfmt.toml
android/app/: build.gradle
android/app/src/main/java/com/rc/rustspike/myapplication/: JNICallback.kt  MainActivity.kt
hello/: Cargo.toml
hello/src/: lib.rs
helloandroid/src/: lib.rs
helloios/include/: helloios.h  module.modulemap
helloios/src/: lib.rs
ios/: .gitignore
ios/include/: helloios.h
ios/ios/: ContentView.swift  ImageFetcher.swift  iosApp.swift
ios/ios.xcodeproj/: project.pbxproj
ios/ios/Assets.xcassets/rust-error.imageset/: Contents.json  Thumbs.db
ios/ios/Assets.xcassets/rust-mascot.imageset/: Contents.json  Thumbs.db
ios/iosTests/: iosTests.swift
ios/iosUITests/: iosUITests.swift
scripts/: download_and_save_image.py  download_count.py  image_downloader.go
